Audience and Competition commit

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -16,7 +16,13 @@
             </nav>
         </header>
         <main>
-            
+            <h2>Competition</h2>
+            <h4>What competitors are doing right</h4>
+            <p>Many climbing based platforms have large route databases, very detailed maps, and large communities in them. These sites often provide lots of quality of life such as: accurate location data, filtering options, and plenty of climbing information.</p>
+            <h4>What competitors are doing wrong</h4>
+            <p>Many platforms are more tailored towards more advanced climbers and can be rather complex. Many sites require accounts just to access them, some sites require subscriptions or are paid mobile apps, while other sites heavily limit your ability to use them without paying. This can all be discouraging for people who are just getting into climbing and simply want to find some outdoor routes.</p>
+            <h4>How this site does it better</h4>
+            <p>This site focuses on simplicity, it will simply be markers on a map with a bunch of information on the route they are marking. This makes the map easy to use and I will add filtering options that make it easy for people to find routes that will fit them. My goal is for the site to be very approachable while still being great for advanced climbers.</p>
         </main>
         <footer>
             <h6>Copyright &copy; 2026 </h6>
