minor word changes

--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -25,8 +25,8 @@
             <p>The most common age range for this website would likely be about 18-26, which is everyone from college kids to young adults who do rock climbing as a hobby, though the age range could be much lower or higher.</p>
             <h4>Gender</h4>
             <p>Rock climbing has been a male dominated sport for a very long time, so that would likely be the majority of my users, that being said women in rock climbing have been increasing in recent years.</p>
-            <h4>Demographics</h4>
-            <p>Some common demographics for the users of my site would be: beginner/intermediate rock climbers, people who are interested in outdoor activity, people who have been climbing in a gym and want to try outdoor climbing, and rock climbers who enjoy creating and sharing routes.</p>
+            <h4>Other</h4>
+            <p>Some other common demographics for the users of my site would be: beginner/intermediate rock climbers, people who are interested in outdoor activity, people who have been climbing in a gym and want to try outdoor climbing, and rock climbers who enjoy creating and sharing routes.</p>
         </main>
         <footer>
             <h6>Copyright &copy; 2026 </h6>
