Final Commit Before First Submission

--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="utf-8"/>
+
+<head>
+    <meta charset="utf-8" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Route Mapper</title>
-    </head>
-    <body>
-        <header>
-            <h1>Route Mapper</h1>
-            <nav>
-                <a href="index.html">Home</a> &nbsp;
-                <a href="competition.html">Competition</a> &nbsp;
-                <a href="audience.html">Audience</a> &nbsp;
-            </nav>
-        </header>
-        <main>
-            <h2>Audience</h2>
-            <h4>Primary Audience</h4>
-            <p>The main audience for this website will be rock climbers who are interested in exploring the outdoors. Whether they have been climbing for a long time or are just getting into it, this site will be for anyone who wants to go rock climbing outside.</p>
-            <h4>Geolocation</h4>
-            <p>The main audience will likely live in places where rock climbing is readily available with outdoor climbing areas.</p>
-            <h4>Age</h4>
-            <p>The most common age range for this website would likely be about 18-26, which is everyone from college kids to young adults who do rock climbing as a hobby, though the age range could be much lower or higher.</p>
-            <h4>Gender</h4>
-            <p>Rock climbing has been a male dominated sport for a very long time, so that would likely be the majority of my users, that being said women in rock climbing have been increasing in recent years.</p>
-            <h4>Other</h4>
-            <p>Some other common demographics for the users of my site would be: beginner/intermediate rock climbers, people who are interested in outdoor activity, people who have been climbing in a gym and want to try outdoor climbing, and rock climbers who enjoy creating and sharing routes.</p>
-        </main>
-        <footer>
-            <h6>Copyright &copy; 2026 </h6>
-        </footer>
-    </body>
+</head>
+
+<body>
+    <header>
+        <h1>Route Mapper</h1>
+        <nav>
+            <a href="index.html">Home</a> &nbsp;
+            <a href="competition.html">Competition</a> &nbsp;
+            <a href="audience.html">Audience</a> &nbsp;
+        </nav>
+    </header>
+    <main>
+        <h2>Audience</h2>
+        <h4>Primary Audience</h4>
+        <p>The main audience for this website will be rock climbers who are interested in exploring the outdoors.
+            Whether they have been climbing for a long time or are just getting into it, this site will be for anyone
+            who wants to go rock climbing outside.</p>
+        <h4>Geolocation</h4>
+        <p>The main audience will likely live in places where rock climbing is readily available with outdoor climbing
+            areas.</p>
+        <h4>Age</h4>
+        <p>The most common age range for this website would likely be about 18-26, which is everyone from college kids
+            to young adults who do rock climbing as a hobby, though the age range could be much lower or higher.</p>
+        <h4>Gender</h4>
+        <p>Rock climbing has been a male dominated sport for a very long time, so that would likely be the majority of
+            my users, that being said women in rock climbing have been increasing in recent years.</p>
+        <h4>Other</h4>
+        <p>Some other common demographics for the users of my site would be: beginner/intermediate rock climbers, people
+            who are interested in outdoor activity, people who have been climbing in a gym and want to try outdoor
+            climbing, and rock climbers who enjoy creating and sharing routes.</p>
+    </main>
+    <footer>
+        <h6>Copyright &copy; 2026 </h6>
+    </footer>
+</body>
