--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="utf-8"/>
+
+<head>
+    <meta charset="utf-8" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Route Mapper</title>
-    </head>
-    <body>
-        <header>
-            <h1>Route Mapper</h1>
-            <nav>
-                <a href="index.html">Home</a> &nbsp;
-                <a href="competition.html">Competition</a> &nbsp;
-                <a href="audience.html">Audience</a> &nbsp;
-            </nav>
-        </header>
-        <main>
-            <h2>Website Summary</h2>
-            <h4>What content will the site contain?</h4>
-            <p>This site will contain a map that people can go into and list the locations of climbing spots. People can add their own climbing route locations to the map and include basic information such as how to get there, the route name, the difficulty, etc. Since there is no server for this website as I am hosting it locally, people won't be able to see other peoples routes, but theirs will stay saved in their local browser. The site will also have an overview page that covers what the site does and its purpose, as well as how to use it.</p>
-            <h4>Where will you get all of the content for your site (ie. images & text)?</h4>
-            <p>The map data will be provided by open-source map tools such as leaflet.js and OpenStreetMap. The text on the website itself will be written by me, and the text written on markers on the map will be written by the person who adds them, although I might add some required text to the creation of markers to make sure there is no confusion for others.</p>
-            <h4>Why should users care about the focus of the site?</h4>
-            <p>For a very long time if someone wanted to go rock climbing outside they would have to find a route through a book and basically figure it out from there. As the internet has gotten bigger people are able to share their routes to a much larger audience and it has also made it easier to access these routes. This site intends to create a one stop shop for people to find routes or add routes that they find for other people to enjoy.</p>
-            <h4>Why should a site be built for this?</h4>
-            <p>Climbing has always been a community based activity so many people who go out and find routes always want to share them with others. Having a site that is built for this purpose of sharing climbs to others makes it easier for everyone involved. Whether people just want to use it to find routes that are nearby or to go out and discover something new.</p>
-            <h4>What would you like users to do at your site?</h4>
-            <p>People should be able to explore the map, search for climbing routes, and add their own climbing routes. I would like there to be a lot of quality of life for people on this app, such as saving the routes they have completed, being able to edit the routes they have added, and comment on other people's routes, and much more. The site should be a place where people can interact with each other and find some nice places to climb. </p>
-            <h4>What is the goal of the site?</h4>
-            <p>For now the goal of this site is to make a prototype for an interactice map with the ideas that I have, while still only hosting locally. The end goal would be for people to interact with a mapping tool to view and add climbing locations/routes.</p>
-        </main>
-        <footer>
-            <h6>Copyright &copy; 2026 </h6>
-        </footer>
-    </body>
+</head>
+
+<body>
+    <header>
+        <h1>Route Mapper</h1>
+        <nav>
+            <a href="index.html">Home</a> &nbsp;
+            <a href="competition.html">Competition</a> &nbsp;
+            <a href="audience.html">Audience</a> &nbsp;
+        </nav>
+    </header>
+    <main>
+        <h2>Website Summary</h2>
+        <h4>What content will the site contain?</h4>
+        <p>This site will contain a map that people can go into and list the locations of climbing spots. People can add
+            their own climbing route locations to the map and include basic information such as how to get there, the
+            route name, the difficulty, etc. Since there is no server for this website as I am hosting it locally,
+            people won't be able to see other peoples routes, but theirs will stay saved in their local browser. The
+            site will also have an overview page that covers what the site does and its purpose, as well as how to use
+            it.</p>
+        <h4>Where will you get all of the content for your site (ie. images & text)?</h4>
+        <p>The map data will be provided by open-source map tools such as leaflet.js and OpenStreetMap. The text on the
+            website itself will be written by me, and the text written on markers on the map will be written by the
+            person who adds them, although I might add some required text to the creation of markers to make sure there
+            is no confusion for others.</p>
+        <h4>Why should users care about the focus of the site?</h4>
+        <p>For a very long time if someone wanted to go rock climbing outside they would have to find a route through a
+            book and basically figure it out from there. As the internet has gotten bigger people are able to share
+            their routes to a much larger audience and it has also made it easier to access these routes. This site
+            intends to create a one stop shop for people to find routes or add routes that they find for other people to
+            enjoy.</p>
+        <h4>Why should a site be built for this?</h4>
+        <p>Climbing has always been a community based activity so many people who go out and find routes always want to
+            share them with others. Having a site that is built for this purpose of sharing climbs to others makes it
+            easier for everyone involved. Whether people just want to use it to find routes that are nearby or to go out
+            and discover something new.</p>
+        <h4>What would you like users to do at your site?</h4>
+        <p>People should be able to explore the map, search for climbing routes, and add their own climbing routes. I
+            would like there to be a lot of quality of life for people on this app, such as saving the routes they have
+            completed, being able to edit the routes they have added, and comment on other people's routes, and much
+            more. The site should be a place where people can interact with each other and find some nice places to
+            climb. </p>
+        <h4>What is the goal of the site?</h4>
+        <p>For now the goal of this site is to make a prototype for an interactice map with the ideas that I have, while
+            still only hosting locally. The end goal would be for people to interact with a mapping tool to view and add
+            climbing locations/routes.</p>
+    </main>
+    <footer>
+        <h6>Copyright &copy; 2026 </h6>
+    </footer>
+</body>
